# image_warrior

./: .gitignore  CMakeLists.txt  README.md  config.json  image_warrior.cpp
src/: context.cpp  context.h  eta_estimator.cpp  eta_estimator.h  file_utils.cpp  file_utils.h  object_database.cpp  object_database.h  utils.cpp  utils.h
src/processors/: image_processor.cpp  image_processor.h  processor.h
